Plugins: Fix jump in plugin-items when compact notices are rendered

--- a/client/my-sites/plugins/plugin-item/style.scss
+++ b/client/my-sites/plugins/plugin-item/style.scss
@@ -118,7 +118,7 @@
 	display: block;
 	font-size: 14px;
 	font-weight: 600;
-	line-height: 32px;
+	line-height: 30px;
 	overflow: hidden;
 	text-align: left;
 	text-overflow: ellipsis;
